# rules_abcue

./: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  deps.bzl
.bcr/: metadata.template.json
.github/workflows/: BUILD.bazel  Makefile  buildifier_gen.yaml  ci.cue  ci.yaml  ci_gen.yaml  publish_gen.yaml  release_gen.yaml  workflows.cue
.github/workflows/cue.mod/: module.cue
cue/: repositories.bzl
cue.mod/: BUILD.bazel  module.cue
cue/private/: module.bzl  versions.bzl
e2e/bazel6/: BUILD.bazel  bazel6.cue
e2e/bazel6/cue.mod/: module.cue
gazelle/: go.mod
gazelle/cue/: BUILD.bazel  README.md
tools/cmd/replace-stamps/: BUILD.bazel
tools/gazelle/cue/: BUILD.bazel
