load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@rules_abcue//cue:defs.bzl", "cue_export", "cue_instance")

buildifier(
    name = "buildifier.check",
    exclude_patterns = ["./.git/*"],
    lint_mode = "warn",
    mode = "diff",
)

cue_instance(
    name = "workflows",
    package_name = "workflows",
    srcs = ["workflows.cue"],
    ancestor = "//cue.mod",
)

cue_export(
    name = "ci",
    out = "yaml",
    expression = "ci",
    instance = ":workflows",
    package = "workflows",
)

cue_export(
    name = "release",
    out = "yaml",
    expression = "release",
    instance = ":workflows",
    package = "workflows",
)

write_source_files(
    name = "yaml",
    files = {
        "ci_gen.yaml": ":ci",
        "release_gen.yaml": ":release",
    },
)
