load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@rules_abcue//cue:defs.bzl", "cue_export", "cue_instance")

buildifier(
    name = "buildifier.check",
    exclude_patterns = ["./.git/*"],
    lint_mode = "warn",
    mode = "diff",
)

cue_instance(
    name = "workflows",
    package_name = "workflows",
    srcs = ["workflows.cue"],
    ancestor = "//cue.mod",
)

EXPR = [
    "buildifier",
    "ci",
    "release",
]

[
    cue_export(
        name = n,
        out = "yaml",
        expression = n,
        instance = ":workflows",
        package = "workflows",
    )
    for n in EXPR
]

write_source_files(
    name = "yaml",
    files = {
        n + "_gen.yaml": ":" + n
        for n in EXPR
    },
)
