load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cue",
    srcs = [
        "config.go",
        "cue.go",
        "generate.go",
        "resolve.go",
    ],
    importpath = "github.com/abcue/rules_abcue/gazelle/cue",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bazelbuild_bazel_gazelle//config",
        "@com_github_bazelbuild_bazel_gazelle//label",
        "@com_github_bazelbuild_bazel_gazelle//language",
        "@com_github_bazelbuild_bazel_gazelle//pathtools",
        "@com_github_bazelbuild_bazel_gazelle//repo",
        "@com_github_bazelbuild_bazel_gazelle//resolve",
        "@com_github_bazelbuild_bazel_gazelle//rule",
        "@com_github_iancoleman_strcase//:strcase",
        "@org_cuelang_go//cue/ast",
        "@org_cuelang_go//cue/parser",
    ],
)

go_library(
    name = "cuelang",
    srcs = [
        "config.go",
        "cue.go",
        "generate.go",
        "resolve.go",
    ],
    importpath = "",
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//label:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//pathtools:go_default_library",
        "@bazel_gazelle//repo:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
        "@com_github_iancoleman_strcase//:go_default_library",
        "@org_cuelang_go//cue/ast:go_default_library",
        "@org_cuelang_go//cue/parser:go_default_library",
    ],
)
