load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

# gazelle:prefix github.com/abcue/rules_abcue/tools/cmd/replace-stamps

go_library(
    name = "replace_stamps_lib",
    srcs = ["replace.go"],
    importpath = "github.com/seh/rules_cue/tools/cmd/replace-stamps",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "replace-stamps",
    embed = [":replace-stamps_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "lib",
    srcs = ["replace.go"],
    importpath = "",
    visibility = ["//visibility:private"],
)

go_library(
    name = "replace-stamps_lib",
    srcs = ["replace.go"],
    importpath = "github.com/abcue/rules_abcue/tools/cmd/replace-stamps",
    visibility = ["//visibility:private"],
)
